# dreamer

./: README.md
ai-caller/: main.py  pyproject.toml
app/: .env  .env.development  .env.local.sample  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  tailwind.config.js  tsconfig.json
app/components/: LoginButton.tsx
app/components/account/: Config.tsx  Info.tsx
app/components/common/: Alert.tsx  Avatar.tsx  DeleteModal.tsx  Error.tsx  Loading.tsx  Modal.tsx  ReadMore.tsx  Tooltip.tsx
app/components/dream/: CreateDraft.tsx
app/components/layouts/: Header.tsx  HeaderMenu.tsx  Layout.tsx  SigninModal.tsx
app/constants/: chain.ts  config.ts
app/constants/contracts/: address.ts  dreamer.ts  dreams.ts
app/lib/: ai.ts  alchemy.ts  blockchain.ts  convert.ts  error.ts  fetchers.ts  hooks.ts  prisma.ts  utils.ts  withZod.ts  zod.ts
app/lib/blockchain/: dreams.ts  general.ts
app/lib/contexts/: CreateCtx.tsx  CreateDraft.ts
app/pages/: _app.tsx  _document.tsx  dev.tsx  index.tsx  stats.tsx
app/pages/account/: [address].tsx
app/prisma/: .env.sample  dev.sqlite3-journal  schema.prisma
app/schema/: account.ts  accounts.ts  dreams.ts
app/types/: next-auth.d.ts
contract/: .env.sample  .prettierrc  README.md  hardhat.config.js  hardhat.config.ts  helper.ts  package.json  setABI.js
contract/contracts/: Dreams.sol  IPrompts.sol  ISpells.sol  Market.sol  Prompts.sol  Spells.sol  Votes.sol
contract/scripts/: deploy.js  deploy.ts  signature.ts  utils.ts
contract/utils/: verify.js
(+89 files in other folders)
